# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import timetableRouter from "./timetable";
+import assignmentsRouter from "./assignments";
+import resourcesRouter from "./resources";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/timetable", timetableRouter);
+router.use("/assignments", assignmentsRouter);
+router.use("/resources", resourcesRouter);
 
 export default router;
